# starbars

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  annotate.py  example.py  hue.py  pyproject.toml  starbars.py
.github/: FUNDING.yml
.github/workflows/: main.yaml
docs/examples/: hue.py
docs/source/: conf.py  index.rst  starbars.rst
docs/source/examples/: examples.rst
docs/source/examples/specific/: basic.rst  horizontal.rst  hue.rst  iteration.rst  subplots.rst
examples/: example.py  horizontal.py  parameters.py  pvalue_iteration.py  subplots.py
starbars/: __init__.py  _utils.py  utils.py
tests/: test_annotations.py
