[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "starbars"
authors = [{name = "Elide Brunelli", email = "elide.98@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
docs = [
    "sphinx-book-theme~=1.1",
    "sphinx~=7.0",
    "matplotlib~=3.9"
]
test = [
    "pytest",
    "pytest-cov",
    "pandas",
    "seaborn",
    "scipy"
]

[project.urls]
Home = "https://github.com/elide-b/starbars"

